--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend web services for PokeWeather.",
   "main": "dist/app.js",
   "scripts": {
-    "build": "babel src -d dist"
+    "build": "babel src -d dist --copy-files",
+    "start": "npm run build && node dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,8 @@
   },
   "homepage": "https://github.com/jakawell/poke-weather-api#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
