--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "babel src -d dist --copy-files",
-    "start": "npm run build && node dist/app.js"
+    "start": "npm run build && node dist/app.js",
+    "develop": "gulp develop"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-nodemon": "^2.2.1"
   }
 }
